# Just-Organize-My-Photos

./: .gitignore  README.md  README_RU.md  main.py  main.ui  newUI.py  new_ui.ui  pyproject.toml  requirements.txt  test.ui  ui.py
.github/workflows/: codeql.yml
executable/: sysroot.json  sysroot.toml
jomp/: __init__.py  app.py  func.py  main.py  main.ui  ui.py
jomphotos/: __init__.py  app.py  func.py  main.py  ui.py
src/: app.py  func.py  main.py  main.ui  ui.py
test/: new.ui  old.ui  old.ui.py
