[tool.poetry]
name = "just-organize-my-photos"
version = "0.2.0"
description = "A simple PyQt program for manually sorting photos into folders using shortcuts."
authors = ["Den <me@potat.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "jomphotos" }]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^11.0.0"
PyQt5 = "^5.15.11"
PyQt6 = "^6.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jomphotos = "jomphotos:main" # Entry point for running the app
