[tool.poetry]
name = "just-organize-my-photos"
version = "0.3.0"
description = "A simple PyQt program for manually sorting photos into folders using shortcuts."
authors = ["Den <me@potat.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "jomp" }]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^11.0.0"
PyQt6 = "^6.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jomp = "jomp:main" # Entry point for running the app
